correcting grid on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,13 +225,18 @@ button{
 .ingredientsGrid  div {
 padding: 5px;
 }
-.ingredientsGrid  div:nth-child(2){
-  border-left: 1px solid;
-}
 
 .ingredientsGrid{
   display: grid;
-  grid-template-columns: auto 200px;
+}
+
+@media screen and (min-width: 768px){
+  .ingredientsGrid{
+    grid-template-columns: auto 200px;
+  }
+  .ingredientsGrid  div:nth-child(2){
+    border-left: 1px solid;
+  }
 }
 
 
